@@ -1,4 +1,5 @@
 0.17.3
+ - enh: allow specifying collections in upload task files and via the API
  - docs: increase warning threshold for max number of resources to 1000
    (CKAN 2.11.3 handles datasets with many resources much better)
 0.17.2
